# pipecontrol

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  qtquickcontrols2.conf
resources/: PipeControl.desktop  Settings.qml  Top.qml  main.qml
resources/translations/: pipecontrol_it_IT.ts
src/: alsaproperties.cpp  alsaproperties.h  main.cpp  pipewire-dspsettings.sh  pipewiremetadata.cpp  pipewiremetadata.h  pw-top.c  qpipewire.cpp  qpipewire.h  qpipewireclient.cpp  qpipewireclient.h  qpipewiremetadata.cpp  qpipewiremetadata.h  qpipewirenode.cpp  qpipewirenode.h  qpipewirenodelistmodel.cpp  qpipewirenodelistmodel.h  qpipewireprofiler.cpp  qpipewireprofiler.h  qpipewiresettings.cpp  qpipewiresettings.h  systemdservice.cpp  systemdservice.h
src/pw/: qpipewire.cpp  qpipewire.h  qpipewirealsanode.cpp  qpipewirealsanode.h  qpipewireclient.cpp  qpipewireclient.h  qpipewiredevice.cpp  qpipewiredevice.h  qpipewirelink.cpp  qpipewirelink.h  qpipewiremetadata.cpp  qpipewiremetadata.h  qpipewirenode.cpp  qpipewirenode.h  qpipewirenodelistmodel.cpp  qpipewirenodelistmodel.h  qpipewireport.cpp  qpipewireport.h  qpipewireprofiler.cpp  qpipewireprofiler.h  qpipewiresettings.cpp  qpipewiresettings.h  utils.cpp  utils.h
src/pw/media-session/: alsaproperties.cpp  alsaproperties.h
